--- a/style.css
+++ b/style.css
@@ -6,24 +6,48 @@ body {
 
 .container
 {
+    margin-top: 20vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.card
+{
+    height: 30vh;
+    width: 20vh;
     transform: scale(1);
+    transition: transform .5s;
+    backface-visibility: hidden;
+    margin: .9vh;
 }
 
-img 
+/* Efeito de clique */
+.card:active
 {
-    border: 2px solid gray;
-    margin: 65px;
+    transform: scale(0.97);
+    transition: transform .2s;
 }
 
-.carta 
+.card.flip
 {
-    transition: transform 0.5s;
-}
-
-.carta.flip {
     transform: rotateY(180deg);
 }
 
+.front-face
+{
+    height: 30vh;
+    width: 20vh;
+    position: absolute;
+    transform: rotateY(180deg);
+    border: 2px solid white;
+} 
+
+.back-face
+{
+    height: 30vh;
+    width: 20vh;
+    position: absolute;
+    border: 2px solid white;
+}
