--- a/style.css
+++ b/style.css
@@ -1,20 +1,32 @@
-body {
-    padding: 0;
+*
+{
     margin: 0;
-    background-color: black;  
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body 
+{
+    height: 100vh;
+    background-image: url(image/wave.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
 }
 
 .title-game
 {
-    color: white;
+    color: black;
     text-align: center;
     padding-top: 5vh;
+    font-size: 6vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 4px 5px 7px lightgray;
 }
 
 .container
 {
-    margin-top: 10vh;
-    height: 50vh;
+    margin-top: 6vh;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -48,7 +60,8 @@ body {
     width: 20vh;
     position: absolute;
     transform: rotateY(180deg);
-    border: 2px solid white;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px #00000055;
 } 
 
 .back-face
@@ -56,5 +69,6 @@ body {
     height: 30vh;
     width: 20vh;
     position: absolute;
-    border: 2px solid white;
+    border-radius: 20px;
+    box-shadow: 3px 3px 10px #00000055;
 }
